--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="connection_timeout">Connection timeout. Sorry!</string>
     <string name="something_wrong">"There is something wrong with the server! Please try again later.</string>
     <string name="service_under_construction">This service is currently under construction.</string>
+    <string name="dash"> - </string>
 
     <string name="bundesliga">Bundesliga</string>
     <string name="ligue1">Ligue 1</string>
